按照前端的要求进行修改：1.修改了Get /task 2.所欲查询增加了任务状态 3.修正了内部积分逻辑，同时添加测试API
